--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/js/chartRendering.js"></script>
     <link rel="stylesheet" href="/css/profileStyle.css">
     <link rel="stylesheet" href="/css/editProfile.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
@@ -28,10 +30,11 @@
     {{#showProfileSection}}
     <section class="py-4">
 
-        <div class="container py-5">
-            <div class="profile-container text-center">
+        <div class="container-fluid py-5">
+            <div class="profile-container text-center col-5">
                 <h2 class="mb-4">{{username}}</h2>
 
+                
                 <div class="profile-pic-wrapper">
                     <a href="/editProfile" class="d-inline-block position-relative">
                         {{#user.image}}
@@ -77,11 +80,26 @@
                     </form>
                 </div>
             </div>
+            
         </div>
+
+     
     </section>
     {{/showProfileSection}}
 
     {{^admin}} <!--Only shown for users, not for admin-->
+
+    {{#renderStats}}
+    <div class="container-fluid py-5">
+        <div class="profile-container">
+            <div>
+                <h5 class="fw-bolder" >Estadísticas:</h5>
+                <canvas id="graficoTransacciones" width="400" height="200"></canvas>
+            </div>
+        </div>
+    </div>
+    {{/renderStats}}
+
     {{>showProducts_template}}
     {{/admin}}
 
