--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -35,6 +35,7 @@
                 <p>{{product.description}}</p>
                 <div class="d-grid gap-2">
                     <div class="d-grid gap-2">
+                    {{^product.isSold}}
                         {{#isOwner}}
                         <form action="/edit/{{product.id}}" method="post">
                             <button type="submit" class="btn btn-custom w-100">
@@ -83,6 +84,7 @@
                         {{/isFavorite}}
                         {{/isOwner}}
                         {{/admin}}
+                    {{/product.isSold}}
                     </div>
                 </div>
             </div>
