--- a/ByteMarket/backend/src/main/resources/templates/reviews.html
+++ b/ByteMarket/backend/src/main/resources/templates/reviews.html
@@ -1,54 +1,30 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../static/css/productDetailsStyle.css">
-    <link rel="stylesheet" href="../static/css/headerStyle.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <title>{{product.title}}</title>
-</head>
-
-{{>header}}
-
-{{>navbar_profile}}
-
-<body>
+{{#reviews}}
     <div class="container mt-4">
-        <h3>Reseñas del Usuario</h3>
-        {{#review}}
+        <h3>Mis Reseñas</h3>
         <div class="row">
+            {{#reviewStars}}
             <div class="col-md-6">
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">{{reviewer.name}}</h5>
-                        <p class="card-text">{{reviewer.comment}}</p>
+                        <h5 class="card-title">{{owner}}</h5>
+                        <p class="card-text">{{description}}</p>
                         <p><span class="text-warning">
-                                {{#each stars}}
-                                <i class="bi bi-star-fill"></i>
-                                {{/each}}
-                                {{#if halfStar}}
-                                <i class="bi bi-star-half"></i>
-                                {{/if}}
-                            </span> - {{rating}}/5</p>
+                            {{#stars}}
+                            <i class="bi bi-star-fill"></i>
+                            {{/stars}}
+                            {{#emptyStars}}
+                            <i class="bi bi-star"></i>
+                            {{/emptyStars}}
+                        </span> - {{rating}}/5</p>
                     </div>
                 </div>
             </div>
+            {{/reviewStars}}
         </div>
-        {{/review}}
-
     </div>
 
-    {{>footer}}
+{{/reviews}}
 
-</body>
-
-</html>
+{{^reviews}}
+<p class="text-center">No tienes reseñas aún.</p>
+{{/reviews}}
