Added spinner to Load More button and minor error corrected

--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -84,8 +84,10 @@
             <button class="btn btn-custom headerButton" id="load-more" type="button"
                 data-current-page="{{currentPage}}">
                 <span class="fav-sellText">Cargar más</span>
+                <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status" style="display: none;"></span>
             </button>
         </div>
+        
     </section>
 
     {{>footer}}
