--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -43,8 +43,8 @@
                     </button>
                 </a>
             </div>
-            <div class="col-4 header-profile" height="55">
-                <a href="../profile" class="d-flex align-items-center text-decoration-none">
+            <div class="col-3 header-profile justify-content-end" height="55">
+                <a href="/profile" class="d-flex align-items-center text-decoration-none">
                     <div>
                         {{#user.image}}
                         <img class="profilePic" src="/user/image/{{user.id}}" alt="pfp">
