--- a/ByteMarket/backend/src/main/resources/templates/productByCategory.html
+++ b/ByteMarket/backend/src/main/resources/templates/productByCategory.html
@@ -60,8 +60,9 @@
             <button class="btn btn-custom headerButton" id="load-more" type="button"
                 data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}">
                 <span class="fav-sellText">Cargar más</span>
+                <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status" style="display: none;"></span>
             </button>
-        </div>
+        </div>        
     </section>
 
 
