--- a/ByteMarket/backend/src/main/resources/templates/signin_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/signin_template.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="css/headerStyle.css">
+    <link rel="stylesheet" href="/css/formStyle.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>ByteMarket</title>
     <script src="/js/validate.js" defer></script>
