--- a/ByteMarket/backend/src/main/resources/templates/reviews.html
+++ b/ByteMarket/backend/src/main/resources/templates/reviews.html
@@ -26,5 +26,7 @@
 {{/reviews}}
 
 {{^reviews}}
-<p class="text-center">No tienes reseñas aún.</p>
+<div class="text-center">
+    <h3 class="py-4 mb-4 defaultText">Todavía no hay productos en esta sección</h3>
+</div>
 {{/reviews}}
