showReviews in the public profile

--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -120,9 +120,11 @@
         {{>reviews}}
     {{/reviewsSection}}
 
-    {{^reviewsSection}}
-        {{>showProducts_template}} 
-    {{/reviewsSection}}  
+    {{#isOwnProfile}}
+        {{^reviewsSection}}
+            {{>showProducts_template}} 
+        {{/reviewsSection}}  
+    {{/isOwnProfile}}
 
     {{/admin}}
 
